# scim-server

./: .dockerignore  .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  TESTING.md  config.yaml  docker-compose.yml  mise.toml  release-please-config.json  scim.db
.cargo/: audit.toml
.claude/: settings.json
.github/: dependabot.yml
.github/workflows/: ci.yml  release-please.yml  release.yml
examples/: check_external_id.rs  complex_filter_demo.rs  simple_test.rs
src/: auth.rs  config.rs  error.rs  extractors.rs  lib.rs  logging.rs  main.rs  models.rs  startup.rs  utils.rs
src/backend/: mod.rs
src/parser/: filter_operator.rs  filter_parser.rs  mod.rs  patch_parser.rs  resource_type.rs  sort_parser.rs
src/password/: argon2_hasher.rs  bcrypt_hasher.rs  mod.rs  ssha_hasher.rs
src/resource/: attribute_filter.rs  custom.rs  group.rs  mod.rs  resource_type.rs  (+3 more)
tests/: advanced_scim_path_test.rs  attributes_filter_test.rs  authentication_test.rs  cascade_delete_test.rs  case_insensitive_group_displayname_test.rs  case_insensitive_search_bug_test.rs  case_insensitive_username_test.rs  complex_filter_development_test.rs  complex_filter_showcase_test.rs  complex_scim_scenarios_test.rs  crud_operations_test.rs  custom_endpoint_auth_override_test.rs  custom_endpoint_auth_test.rs  custom_endpoint_host_resolution_test.rs  custom_endpoint_integration_test.rs  data_validation_test.rs  default_tenant_test.rs  duplicate_resource_test.rs  empty_array_behavior_test.rs  empty_groups_test.rs  enterprise_user_test.rs  error_handling_test.rs  etag_version_test.rs  external_id_test.rs  group_basic_test.rs  group_member_validation_test.rs  group_search_409_verification_test.rs  group_user_search_test.rs  hyphen_displayname_search_test.rs  include_user_groups_comprehensive_test.rs  include_user_groups_test.rs  logical_operators_test.rs  matrix_integration_test.rs  multi_tenant_test.rs  multi_value_attributes_test.rs  multi_value_clear_test.rs  multi_value_patch_bug_test.rs  pagination_test.rs  password_algorithm_test.rs  patch_compatibility_options_test.rs  (+12 more)
(+44 files in other folders)
