[package]
name = "scim-server"
version = "0.1.0"
edition = "2021"

[dependencies]
scim_v2 = "0.2.5"
axum = { version = "0.7", features = ["macros", "tokio"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
rusqlite = { version = "0.30", features = ["bundled"] }
sqlx = { version = "0.7", features = ["runtime-tokio-rustls", "postgres", "json", "uuid", "chrono", "sqlite"] }
chrono = { version = "0.4", features = ["serde"] }
getrandom = "^0.3"
scim_proto = "1.6.4"
async-trait = "0.1"
tracing = "0.1"
tracing-subscriber = "0.3"
json-patch = "4.0.0"
regex = "1.0"
clap = { version = "4.0", features = ["derive"] }
bcrypt = "0.15"
argon2 = "0.5"
sha1 = "0.10"
base64 = "0.22"
rand = "0.8"
url = "2.5"
email_address = "0.2"
langtag = "0.4"
chrono-tz = "0.8"
fluent-uri = "0.1"
lazy_static = "1.4"

[dependencies.uuid]
version = "1.14.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]


[dev-dependencies]
axum-test = "15.0"
tower = { version = "0.4", features = ["util"] }
http = "1.0"
testcontainers = "0.15"
testcontainers-modules = { version = "0.3", features = ["postgres"] }
paste = "1.0"
